tests/output_contracts/snapshots/output_contracts__json_output__blocked_json_output.snap
---
source: tests/output_contracts/json_output.rs
expression: normalize_json(&json)
---
[
  {
    "blocked_by": [
      "ISSUE_ID"
    ],
    "blocked_by_count": 1,
    "created_at": "TIMESTAMP",
    "created_by": "ACTOR",
    "id": "ISSUE_ID",
    "issue_type": "task",
    "priority": 2,
    "status": "open",
    "title": "Blocked issue",
    "updated_at": "TIMESTAMP"
  }
]
