tests/output_contracts/snapshots/output_contracts__json_output__blocked_truncated_json_output.snap
---
source: tests/output_contracts/json_output.rs
expression: normalize_json(&json)
---
{
  "issues": [
    {
      "blocked_by": [
        "ISSUE_ID"
      ],
      "blocked_by_count": 1,
      "created_at": "TIMESTAMP",
      "created_by": "ACTOR",
      "id": "ISSUE_ID",
      "issue_type": "task",
      "priority": 2,
      "status": "open",
      "title": "Blocked issue 1",
      "updated_at": "TIMESTAMP"
    }
  ],
  "total": 2,
  "limit": 1,
  "offset": 0,
  "has_more": true
}
