tests/output_contracts/snapshots/output_contracts__json_output__comments_list_json_output.snap
---
source: tests/output_contracts/json_output.rs
expression: normalize_json(&list_json)
---
[
  {
    "id": "ISSUE_ID",
    "issue_id": "ISSUE_ID",
    "author": "ACTOR",
    "text": "First comment",
    "created_at": "TIMESTAMP"
  }
]
