tests/output_contracts/snapshots/output_contracts__json_output__count_grouped_by_priority_json_output.snap
---
source: tests/output_contracts/json_output.rs
expression: normalize_json(&json)
---
{
  "total": 3,
  "groups": [
    {
      "group": "P0",
      "count": 1
    },
    {
      "group": "P2",
      "count": 1
    },
    {
      "group": "P3",
      "count": 1
    }
  ]
}
