tests/output_contracts/snapshots/output_contracts__json_output__count_json_output.snap
---
source: tests/output_contracts/json_output.rs
expression: normalize_json(&json)
---
{
  "count": 2
}
