tests/output_contracts/snapshots/output_contracts__json_output__create_json_output.snap
---
source: tests/output_contracts/json_output.rs
expression: normalize_json(&json)
---
{
  "id": "ISSUE_ID",
  "title": "New feature request",
  "status": "open",
  "priority": 1,
  "issue_type": "feature",
  "created_at": "TIMESTAMP",
  "created_by": "ACTOR",
  "updated_at": "TIMESTAMP",
  "source_repo": "SOURCE_REPO",
  "compaction_level": 0,
  "original_size": 0
}
