tests/output_contracts/snapshots/output_contracts__json_output__dep_list_json_output.snap
---
source: tests/output_contracts/json_output.rs
expression: normalize_json(&json)
---
[
  {
    "issue_id": "ISSUE_ID",
    "depends_on_id": "ISSUE_ID",
    "type": "blocks",
    "title": "Parent issue",
    "status": "open",
    "priority": 2
  }
]
